hphp/hack/test/typecheck/using/using_bad_async.php.exp
File "using_bad_async.php", line 15, characters 15-38:
await can only be used inside async functions (NastCheck[3003])
