hphp/hack/test/typecheck/using/using_bad_async.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class Handle implements IDisposable {
  public function __dispose():void { }
  public function foo():void { }
}
class AsyncHandle implements IAsyncDisposable {
  public async function __disposeAsync():Awaitable<void> { }
  public function bar():void { }
}

function testit(bool $b):void {
  // Should be rejected in a non-async function
  await using ($x = new AsyncHandle());
}
